--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -6,35 +6,35 @@
 
 html {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 21px;
+    font-size: 16px;
 }
 
 /* Header Section */
 
 header {
     margin: 0 24px;
-    height: 64px;
     border-bottom: 1px solid gray;
 }
 
-#header-desktop {
+#header-desktop nav {
     display: flex;
+    height: 64px;
     justify-content: space-between;
     align-items: center;
 }
 
-#logo-container {
+.logo-container {
     display: inline-flex;
     align-items: center;
 }
 
-#logo-img-container {
-    width: 52px;
+.logo-img-container {
+    width: 42px;
     overflow: hidden;
     display: inline-block;
 }
 
-#logo-img-container img {
+.logo-img-container img {
     width: 100%;
     height: auto;
 }
@@ -53,7 +53,7 @@ header {
     color: gray;
 }
 
-header nav, header ul {
+header ul {
     display: inline;
 }
 
@@ -61,4 +61,32 @@ header li {
     display: inline;
     margin-left: 16px;
     font-size: 1.25rem;
+}
+
+#header-mobile {
+    display: none;
+}
+
+/* Mobile Header */
+@media only screen and (max-width: 745px) {
+    #header-desktop {
+        display: none;
+    }
+
+    #header-mobile {
+        display: block;
+        /* height: 64px; */
+    }
+
+    #header-mobile nav {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 64px;
+    }
+
+    #header-mobile img {
+        height: 35px;
+        width: auto;
+    }
 }
