--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -9,11 +9,16 @@ html {
     font-size: 16px;
 }
 
+h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
 /* Header Section */
 
 header {
     margin: 0 24px;
-    border-bottom: 1px solid gray;
+    /* border-bottom: 1px solid gray; */
 }
 
 #header-desktop nav {
@@ -89,4 +94,38 @@ header li {
         height: 35px;
         width: auto;
     }
+}
+
+
+/* Banner Section */
+
+#banner {
+    /* width: 100%; */
+    background-color: lightgray;
+    padding: 32px 24px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#banner .picture-container {
+    display: inline-block;
+    width: 60%;
+    height: auto;
+    overflow: hidden;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+#banner .picture-container img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+#banner .textbox {
+    margin-left: 24px;
+    display: inline-block;
+    flex-shrink: 1;
+    flex-grow: 1;
 }
