--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -11,7 +11,13 @@ html {
 
 h1 {
     font-size: 2.5rem;
-    font-weight: bold;
+    font-weight: 900;
+    margin-bottom: 2.5rem;
+}
+
+h3 {
+    font-size: 2rem;
+    font-weight: 700;
 }
 
 /* Header Section */
@@ -119,12 +125,30 @@ header li {
 }
 
 #banner .textbox {
+    height: 100%;
     padding: 32px 16px;
     position: absolute;
     left: 60%;
     top: 0px;
+    display: flex;
+    align-items: center;
 }
 
 #banner .vertical-center {
-    margin auto 0;
+    padding-right: 15%;
+}
+
+#banner .button {
+    padding: 8px 0;
+    background-color: gray;
+    color: white;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 3rem;
+}
+
+@media only screen and (max-width: 970px) {
+    #banner .vertical-center {
+        padding-right: 0;
+    }
 }
