--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -106,7 +106,6 @@ header li {
 
     #header-mobile {
         display: block;
-        /* height: 64px; */
     }
 
     #header-mobile nav {
@@ -325,7 +324,7 @@ header li {
 
 .course-box {
     flex: 1 1;
-    /* width: 30%; */
+    width: 30%;
     display: inline-block;
     vertical-align: top;
     background-color: white;
@@ -345,5 +344,38 @@ header li {
 }
 
 .course-box .textbox {
-    padding: 16px 16px 24px 16px;
+    padding: 16px 16px 16px 16px;
+}
+
+.course-box h3,
+.course-box p {
+    margin-bottom: 8px;
+}
+
+@media only screen and (max-width: 860px) {
+    #courses {
+        background-color: white;
+        padding: 32px 16px 32px 16px;
+    }
+
+    #courses h2 {
+        margin-bottom: 16px;
+    }
+
+    .course-block {
+        display: block;
+    }
+
+    .course-box {
+        flex: none;
+        width: 100%;
+        display: block;
+        background-color: lightgray;
+        margin: 0 0 8px 0;
+    }
+
+    .course-box .picture-container,
+    .course-box p {
+        display: none;
+    }
 }
