--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -407,3 +407,17 @@ header li {
 #thesis-video {
     padding-bottom: 24px;
 }
+
+@media only screen and (max-width: 960px) {
+    #thesis h3,
+    #thesis p, 
+    #thesis .secondary-block {
+        display: none;
+    }
+
+    #thesis .main-article {
+        width: 100%;
+        padding: 16px 0 24px 0;
+    }
+
+}
